--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@angular/router": "^16.2.0",
     "@ng-bootstrap/ng-bootstrap": "^15.1.2",
     "@popperjs/core": "^2.11.6",
+    "@sentry/angular": "^8.28.0",
+    "@sentry/browser": "^8.28.0",
+    "@sentry/tracing": "^7.114.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
