--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --watch",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "analyze-bundle": "ng build --configuration=analyze-bundle && source-map-explorer dist/**/*.js --no-border-checks",
@@ -28,6 +28,8 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "google-libphonenumber": "^3.2.40",
+    "intl-tel-input": "^19.5.7",
     "jquery": "^3.7.1",
     "json-server": "^1.0.0-alpha.23",
     "ngx-toastr": "^19.0.0",
@@ -52,6 +54,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "sass": "^1.86.0",
     "typescript": "~5.4.5",
     "typescript-eslint": "8.18.0"
   }
