--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "rxjs": "~7.8.0",
     "ts-xlsx": "^0.0.11",
     "tslib": "^2.3.0",
+    "ua-parser-js": "^2.0.7",
     "xlsx": "^0.18.5",
     "zone.js": "~0.14.10"
   },
